# task_manager_v2

./: .env  .gitignore  alembic.ini  build.sh  main.py  pyproject.toml  setup.py  setup_cython.py  start_taskman.py
alembic/: env.py
blueprints/: models.py  router.py  schemas.py  service.py
core/: config.py  database.py  event_manager.py  events_router.py  grpc_client.py  pg_listener.py
data/: .env.example  .envexample
data/hanwha/: blueprints.json
data/ullrigg/: 70_in_70_out.job  blueprints.json  simulation.json
data/vagle/: auto_trip_pipes.job  auto_trip_stands.job  auto_tripping_demo.job  blueprints.json  tripping_demo.job  tripping_out_demo.job
data/workshop/: blueprints.json
data/x29/: add_on.json  blueprints.json  simulation.json
data/x44/: 8_in_8_out.job  blueprints.json  simulation.json
grpc_gen/: __init__.py  job_runner_pb2.py  job_runner_pb2_grpc.py
jobs/: events.py  job_status_manager.py  models.py  router.py  schemas.py  service.py  ws_manager.py
proto/: job_runner.proto
scripts/: gen_grpc.sh  seed_blueprints.py  setup_db.py
spec/: taskman.spec
tests/: jobs.http
